[gd_scene load_steps=17 format=3 uid="uid://pmo1mmt2quj"]

[ext_resource type="Script" uid="uid://bsatmh73n4qkn" path="res://Scripts/MenuPrincipal.gd" id="1_ufr4i"]
[ext_resource type="Texture2D" uid="uid://cy4my3htkm5vl" path="res://Arts/Audio/logoLUDO.png" id="2_uffod"]
[ext_resource type="AudioStream" uid="uid://difvjol0vofoc" path="res://Arts/Audio/lobbyOST.mp3" id="3_uffod"]
[ext_resource type="Script" uid="uid://7bygfw6ejqha" path="res://Scenes/menu/audio_control.gd" id="4_655o3"]
[ext_resource type="AudioStream" uid="uid://ca4unfbg03kgm" path="res://Arts/Audio/btn.wav" id="4_ygw4n"]
[ext_resource type="Script" uid="uid://dyxi4kk3fpxmr" path="res://Scenes/menu/check_button.gd" id="5_kwgaw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hn0nd"]
bg_color = Color(1, 0.870588, 0.34902, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bd8gm"]
texture = ExtResource("2_uffod")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pfblw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfblw"]
bg_color = Color(0, 0.443137, 0.647059, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.258824)
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bd8gm"]
bg_color = Color(0.0117647, 0.207843, 0.337255, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.258824)
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtfr5"]
bg_color = Color(0.886275, 0.0745098, 0.0509804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.258824)
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7oun"]
bg_color = Color(0.00376495, 0.0644702, 0.188722, 0.85098)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ygw4n"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_655o3"]
color = Color(1, 0.815686, 0.0235294, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kwgaw"]
color = Color(1, 0.815686, 0.0235294, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufr4i")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hn0nd")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.5
offset_top = 4.0
offset_right = 184.5
offset_bottom = 331.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bd8gm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -235.0
offset_top = -307.0
offset_right = 276.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.915735, 0.915735)
theme_override_constants/separation = 8

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pfblw")
theme_override_styles/hover = SubResource("StyleBoxFlat_pfblw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bd8gm")
theme_override_styles/normal = SubResource("StyleBoxFlat_dtfr5")
text = "Jogar"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pfblw")
theme_override_styles/hover = SubResource("StyleBoxFlat_pfblw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bd8gm")
theme_override_styles/normal = SubResource("StyleBoxFlat_dtfr5")
text = "Configurações"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pfblw")
theme_override_styles/hover = SubResource("StyleBoxFlat_pfblw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bd8gm")
theme_override_styles/normal = SubResource("StyleBoxFlat_dtfr5")
text = "Créditos"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pfblw")
theme_override_styles/hover = SubResource("StyleBoxFlat_pfblw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bd8gm")
theme_override_styles/normal = SubResource("StyleBoxFlat_dtfr5")
text = "Sair"

[node name="lobbyOST" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_uffod")
volume_db = -4.685
bus = &"Music"
parameters/looping = false

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.0
offset_top = -211.5
offset_right = 309.0
offset_bottom = 211.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u7oun")

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -308.0
offset_right = 307.0
offset_bottom = 106.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Configurações"
horizontal_alignment = 1

[node name="Button4" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = 145.0
offset_right = 99.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pfblw")
theme_override_styles/hover = SubResource("StyleBoxFlat_pfblw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bd8gm")
theme_override_styles/normal = SubResource("StyleBoxFlat_dtfr5")
text = "Voltar"

[node name="AudioControl" type="HSlider" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -68.5
offset_right = 180.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_ygw4n")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_655o3")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_kwgaw")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_655o3")
audio_bus_name = "Music"

[node name="CheckButton" type="CheckButton" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -171.0
offset_right = 185.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 21
text = "Tela Cheia"
script = ExtResource("5_kwgaw")

[node name="Label2" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -458.0
offset_top = 194.0
offset_right = 157.0
offset_bottom = 231.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 21
text = "Som"
horizontal_alignment = 1

[node name="buttonclick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ygw4n")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Button4" to="." method="_back_pressed"]
[connection signal="value_changed" from="Options/AudioControl" to="Options/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/CheckButton" to="Options/CheckButton" method="_on_toggled"]
